# ntt-c-sim-ui

./: .clang-format  .gitignore  README.md  helper.py  pyproject.toml  settings.json
config/: utils.py
simui/: CMakeLists.txt
simui/config/: common.cfg  debug.cfg  release.cfg
simui/examples/: CMakeLists.txt
simui/examples/simple/: main.c
simui/include/simui/: apis.h  common.h  datatypes.h  event.h  font.h  functions.h  platform.h  simui.h  texture.h
simui/shaders/: sim.frag  sim.vert  text.frag  text.vert  texture.frag  texture.vert
simui/src/: default_fragment_shader.h.in  default_vertex_shader.h.in  font.c  platform.c  simui.c  simui_default_renderer.c
